ecmascript/parser/tests/test262-error-references/fail/1aefe47e20eb91fa.module.js.stderr
error: Unexpected token Some(Word(await))
 --> $DIR/tests/test262-parser/fail/1aefe47e20eb91fa.module.js:1:1
  |
1 | await
  | ^^^^^

